foundations/flex/07-flex-layout-2/style.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  min-height: 100vh;
}

.header {
  height: 72px;
  background: darkmagenta;
  color: white;
}

.footer {
  height: 72px;
  background: #eee;
  color: darkmagenta;
}

.sidebar {
  width: 300px;
  background: royalblue;
  box-sizing: border-box;
}

.card {
  border: 1px solid #eee;
  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
  border-radius: 4px;
}

/* SOLUTION */

body{
  display: flex;
  flex-direction: column;
}

.header{
  font-size: 32px;
  font-weight: 900;
  display: flex;
  align-items: center;
  padding-left: 16px;
}

.container {
  flex: 1;
  display: flex;
  
}

.sidebar{
  flex-shrink: 0;
  padding: 16px;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 16px;
}

a {
  text-decoration: none;
  color: #fff;
  font-size: 24px;
}


.card-container {
  padding: 48px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 32px;
}

.card {
  width: 250px;
  height: 250px;
  padding: 12px;
}

.footer {
  display: flex;
  justify-content: center;
  align-items: center;
}

